Added Wikipedia, syonyme and rhyme command

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js-commando": "^0.10.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
+    "node-fetch": "^2.2.0",
     "opusscript": "0.0.6",
     "xmlhttprequest": "^1.8.0",
     "ytdl-core": "^0.25.2"
