--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "discord.js-commando": "^0.10.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
+    "mysql": "^2.16.0",
     "node-fetch": "^2.2.0",
     "opusscript": "0.0.6",
+    "pg": "^7.5.0",
     "xmlhttprequest": "^1.8.0",
     "ytdl-core": "^0.25.2"
   }
